tests/ui/structs/non-struct-in-struct-position.stderr
error[E0574]: expected struct, variant or union type, found module `A`
  --> $DIR/non-struct-in-struct-position.rs:7:13
   |
LL |     let u = A { x: 1 };
   |             ^ not a struct, variant or union type

error[E0574]: expected struct, variant or union type, found builtin type `u32`
  --> $DIR/non-struct-in-struct-position.rs:8:13
   |
LL |     let v = u32 { x: 1 };
   |             ^^^ not a struct, variant or union type

error[E0574]: expected struct, variant or union type, found module `A`
  --> $DIR/non-struct-in-struct-position.rs:10:9
   |
LL |         A { x: 1 } => {}
   |         ^ not a struct, variant or union type

error[E0574]: expected struct, variant or union type, found builtin type `u32`
  --> $DIR/non-struct-in-struct-position.rs:12:9
   |
LL |         u32 { x: 1 } => {}
   |         ^^^ not a struct, variant or union type

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0574`.
